MDEV-6497 InnoDB deadlocks on UNINSTALL PLUGIN

Free the trx of the current thd (if any) in innobase_end()